[gd_scene load_steps=6 format=3 uid="uid://brtx1r221rygk"]

[ext_resource type="Script" uid="uid://dvx0rw13l88cm" path="res://code/buildings/tesla_coil.gd" id="1_fg107"]
[ext_resource type="TileSet" uid="uid://dd61axkqlofl7" path="res://data/tileset/level_tileset.tres" id="2_fg107"]
[ext_resource type="Texture2D" uid="uid://n4wxf07sod4d" path="res://textures/16x16_power.png" id="3_a1v3g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty1iy"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_a1v3g"]

[node name="TeslaCoil" type="Area2D"]
collision_mask = 10
script = ExtResource("1_fg107")
metadata/_custom_type_script = "uid://ckg6lsrqg0ws5"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ty1iy")

[node name="normal" type="TileMapLayer" parent="."]
unique_name_in_owner = true
position = Vector2(-32, -32)
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 15, 0, 0, 0, 0, 0)
tile_set = ExtResource("2_fg107")

[node name="attack" type="TileMapLayer" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-32, -32)
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 14, 0, 0, 0, 0, 0)
tile_set = ExtResource("2_fg107")

[node name="hp_bar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 4)
offset_left = -24.0
offset_top = -26.0
offset_right = 24.0
offset_bottom = -22.0
theme_type_variation = &"building_hp_bar"
max_value = 1.0
value = 0.5
show_percentage = false

[node name="mouse_over" type="Control" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0

[node name="power_off" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.247059, 0.717647, 1)
custom_minimum_size = Vector2(32, 32)
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("3_a1v3g")

[node name="line_point" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -12)

[node name="attack_line" type="Line2D" parent="line_point"]
unique_name_in_owner = true
visible = false
top_level = true
position = Vector2(0, -12)
points = PackedVector2Array(0, 0, 200, 0)
width = 5.0

[node name="attack_area" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="attack_area_collider" type="CollisionShape2D" parent="attack_area"]
unique_name_in_owner = true
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_a1v3g")
